Changes in version 1.5 (...12.2008)

 - Code::Blocks workspaces added.  C::B projects (using gcc) now output to /lib/gcc and /bin/gcc, when built on either Windows or Linux.

 - Added a test suite in the /tests directory.  This can be used to perform regression tests, and should be updated with new tests to verify fixes or validate new features.

 - Changed the preferred way of altering light node's radius: Use the new member methods of ILightSceneNode instead of directly modifying the SLight structure.

 - Changed the initial attenuation back to (0,1/radius,0). To override this value simply change the attenuation in the SLight (lightnode->getLightData().Attenuation.set(x,y,z))

 - Dirty fix for OSX device setResizable and a bug fix to do with resizing the device.

 - Terrain heightmap and texture were flipped in order to draw them as expected (looking onto the terrain from high above will just look like the actual texture/heightmap).

 - Significant internal change to the way that FPS camera jump speed and collision response animator gravity interact.  The behaviour is now much more realistic, but it will require you to adjust your jump speed and gravity.

 - Skybox won't be culled anymore by nearplane or farplane.

 - BBoxes of animated meshes (skinned meshes) are updated again.

 - Lost devices (as found with D3D) are properly handled now. So the screen can be resized or minimized without crashing the app.

 - Renamed IGUIElement::setRelativePosition(const core::rect<f32>& r) to IGUIElement::setRelativePositionProportional(), as it has radically different functionality from setRelativePosition(const core::rect<s32>& r)

 - Added IGUIElement::setRelativePosition(const core::position2di & position) to set a new position while retaining the existing height and width.

 - Many Collada fixes. z_up coords are supported now, texture coords are properly loaded. Transparency is supported.
