@@ -16,8 +16,8 @@ namespace scene
 {
 
 	//! Special scene node animator for FPS cameras
-	/** This scene node animator can be attached to a camera to make it act like a first
-	person shooter 
+	/** This scene node animator can be attached to a camera to make it act
+	like a first person shooter 
 	*/
 	class ISceneNodeAnimatorCameraFPS : public ISceneNodeAnimator
 	{
@@ -29,21 +29,24 @@ namespace scene
 		//! Sets the speed of movement in units per millisecond
 		virtual void setMoveSpeed(f32 moveSpeed) = 0;
 
-		//! Returns the rotation speed
+		//! Returns the rotation speed in degrees
+		/** The degrees are equivalent to a half screen movement of the mouse,
+		i.e. if the mouse cursor had been moved to the border of the screen since
+		the last animation. */
 		virtual f32 getRotateSpeed() const = 0;
 
-		//! Set the rotation speed
+		//! Set the rotation speed in degrees
 		virtual void setRotateSpeed(f32 rotateSpeed) = 0;
 
 		//! Sets the keyboard mapping for this animator
-		//! \param keymap: an array of keyboard mappings, see SKeyMap
-		//! \param count: the size of the keyboard map array
+		/** \param keymap Array of keyboard mappings, see SKeyMap
+		\param count Size of the keyboard map array */
 		virtual void setKeyMap(SKeyMap *map, u32 count) = 0;
 
 		//! Sets whether vertical movement should be allowed.
-		//! If vertical movement is enabled then the camera may fight with 
-		//! gravity causing camera shake. Disable this if the camera has 
-		//! a collision animator with gravity enabled.
+		/** If vertical movement is enabled then the camera may fight with 
+		gravity causing camera shake. Disable this if the camera has 
+		a collision animator with gravity enabled. */
 		virtual void setVerticalMovement(bool allow) = 0;
 	};
 } // end namespace scene
